--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earn Money by Clicking Ads!</title>
@@ -418,6 +416,8 @@
             document.getElementById('withdraw-title').textContent = translations[lang].withdrawTitle;
             document.getElementById('withdraw-message').textContent = translations[lang].withdrawMessage;
         }
+    </script>
+
 <script type="text/javascript">
     aclib.runAutoTag({
         zoneId: 'jwlrxcukwm',
