--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
 
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earn Money by Clicking Ads!</title>
@@ -422,9 +423,10 @@
 
 <script type="text/javascript">
     aclib.runAutoTag({
-        zoneId: 'jwlrxcukwm',
+        zoneId: '18guscgzzt',
     });
 </script>
+
 
     </script>
 <script type="text/javascript">
