--- a/index.html
+++ b/index.html
@@ -1,158 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Make Money Online</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #007bff;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        .main {
-            background: #fff;
-            padding: 20px;
-            margin-top: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #007bff;
-        }
-        .sidebar {
-            float: right;
-            width: 30%;
-            background: #f9f9f9;
-            padding: 10px;
-            margin-left: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #007bff;
-            color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            margin-top: 20px;
-        }
-        .clearfix {
-            clear: both;
-        }
-        .ad-banner {
-            background: #e9ecef;
-            padding: 10px;
-            margin: 20px 0;
-            text-align: center;
-        }
-        .ad-banner img {
-            max-width: 100%;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #28a745;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-        .cta-button:hover {
-            background: #218838;
-        }
-    </style>
-    <!-- Adsterra Pop-Under Script -->
-    <script type='text/javascript' src='//constellationbedriddenexams.com/ba/6d/fb/ba6dfb9cc1573193c41178839fbced89.js'></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>¡Gana una PS5 Slim Digital!</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+    }
+    .landing-container {
+      width: 90%;
+      max-width: 400px;
+      background-color: #fff;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+      overflow: hidden;
+      text-align: center;
+      padding: 20px;
+    }
+    header {
+      background-color: #0056b3;
+      color: white;
+      padding: 15px;
+      border-radius: 8px 8px 0 0;
+    }
+    header h1 {
+      font-size: 1.8em;
+      margin: 0;
+    }
+    .main-content img {
+      width: 100%;
+      max-width: 300px;
+      margin-top: 15px;
+      border-radius: 8px;
+    }
+    .cta-button {
+      display: inline-block;
+      padding: 15px 30px;
+      margin: 20px 0;
+      background-color: #FF3E3E;
+      color: white;
+      font-size: 1.2em;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.3s, transform 0.2s;
+    }
+    .cta-button:hover {
+      background-color: #ff1a1a;
+      transform: scale(1.05);
+    }
+    .how-it-works, .testimonials {
+      padding: 15px;
+      text-align: left;
+      font-size: 0.9em;
+      line-height: 1.5;
+    }
+    .how-it-works ul {
+      list-style: none;
+      padding: 0;
+    }
+    .how-it-works ul li {
+      margin-bottom: 10px;
+      padding-left: 20px;
+      position: relative;
+    }
+    .how-it-works ul li:before {
+      content: "✔️";
+      position: absolute;
+      left: 0;
+    }
+    .timer {
+      font-size: 1.4em;
+      color: #FF3E3E;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 
-<header>
-    <h1>Make Money Online</h1>
-    <p>Discover the best ways to earn money from the comfort of your home</p>
-</header>
-
-<div class="container">
-    <div class="main">
-        <h2>Top Strategies to Earn Money Online</h2>
-        <p>Here are some effective methods to start generating income online:</p>
-        <ul>
-            <li><strong>Affiliate Marketing</strong>: Promote products and earn commissions on each sale.</li>
-            <li><strong>Freelancing</strong>: Offer your skills on platforms like Upwork and Fiverr.</li>
-            <li><strong>Online Surveys</strong>: Participate in surveys and get paid for your opinion.</li>
-            <li><strong>Blogging</strong>: Share your insights and monetize your blog with ads.</li>
-        </ul>
-
-        <div class="ad-banner">
-            <h3>Check out our exclusive offers!</h3>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '899118a1abd6c6593737523f98d23894',
-                    'format' : 'iframe',
-                    'height' : 90,
-                    'width' : 728,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//constellationbedriddenexams.com/899118a1abd6c6593737523f98d23894/invoke.js"></script>
-        </div>
-
-        <h2>Maximize Your Earnings</h2>
-        <p>To increase your revenue potential, consider the following tips:</p>
-        <ul>
-            <li>Focus on a specific niche to attract a targeted audience.</li>
-            <li>Implement SEO strategies to boost organic traffic.</li>
-            <li>Promote your content through social media channels.</li>
-            <li>Engage with your audience to build a loyal community.</li>
-        </ul>
-
-        <div class="ad-banner">
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '8e89035b69935c3761263b08eb74eb4c',
-                    'format' : 'iframe',
-                    'height' : 250,
-                    'width' : 300,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//constellationbedriddenexams.com/8e89035b69935c3761263b08eb74eb4c/invoke.js"></script>
-        </div>
-
-        <h2>Exclusive Offer Just for You!</h2>
-        <p>Click the link below to discover more ways to make money online:</p>
-        <a href="https://constellationbedriddenexams.com/g231ru60s8?key=e21f47c01ac4beacae9d204d8e759a67" class="cta-button" target="_blank">Discover Now</a>
-    </div>
-
-    <div class="sidebar">
-        <h2>Useful Resources</h2>
-        <p>Check out these helpful links to get started:</p>
-        <ul>
-            <li><a href="https://www.google.com" target="_blank">Google AdSense</a></li>
-            <li><a href="https://www.upwork.com" target="_blank">Upwork</a></li>
-            <li><a href="https://www.fiverr.com" target="_blank">Fiverr</a></li>
-        </ul>
-    </div>
-    <div class="clearfix"></div>
+<div class="landing-container">
+  <!-- Header -->
+  <header>
+    <h1>¡Gana una PS5 Slim Digital!</h1>
+    <p>Participa gratis para llevarte la nueva PlayStation 5 Slim.</p>
+  </header>
+  
+  <!-- Main Content -->
+  <section class="main-content">
+    <img src="https://media3.allzone.es/2863480-large_default/videoconsola-sony-ps5-slim-1tb-version-digital-blanco.jpg" alt="PS5 Slim Digital">
+    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=47060" class="cta-button">¡Quiero Participar!</a>
+    <div class="timer">¡Quedan pocas unidades disponibles!</div>
+  </section>
+  
+  <!-- How It Works -->
+  <section class="how-it-works">
+    <h2>¿Cómo Funciona?</h2>
+    <ul>
+      <li>Haz clic en el botón de arriba</li>
+      <li>Completa una breve encuesta</li>
+      <li>¡Ingresa y espera a ganar!</li>
+    </ul>
+  </section>
+  
+  <!-- Testimonials -->
+  <section class="testimonials">
+    <p><strong>“Increíble, ¡me llegó la PS5 en una semana!”</strong> - Javier, 25 años</p>
+    <p><strong>“Participé sin creerlo, ¡y gané!”</strong> - Marta, 30 años</p>
+  </section>
 </div>
-
-<footer>
-    <p>&copy; 2024 Make Money Online. All rights reserved.</p>
-</footer>
 
 </body>
 </html>
-
