--- a/index.html
+++ b/index.html
@@ -3,122 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>¡Gana una PS5 Slim Digital!</title>
+  <title>iPhone 16 Pro - El Futuro Está Aquí</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
       color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    .landing-container {
-      width: 90%;
-      max-width: 400px;
-      background-color: #fff;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      border-radius: 8px;
-      overflow: hidden;
-      text-align: center;
-      padding: 20px;
     }
     header {
-      background-color: #0056b3;
-      color: white;
-      padding: 15px;
-      border-radius: 8px 8px 0 0;
-    }
-    header h1 {
-      font-size: 1.8em;
-      margin: 0;
-    }
-    .main-content img {
-      width: 100%;
-      max-width: 300px;
-      margin-top: 15px;
-      border-radius: 8px;
-    }
-    .cta-button {
-      display: inline-block;
-      padding: 15px 30px;
-      margin: 20px 0;
-      background-color: #FF3E3E;
-      color: white;
-      font-size: 1.2em;
-      font-weight: bold;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.3s, transform 0.2s;
-    }
-    .cta-button:hover {
-      background-color: #ff1a1a;
-      transform: scale(1.05);
-    }
-    .how-it-works, .testimonials {
-      padding: 15px;
-      text-align: left;
-      font-size: 0.9em;
-      line-height: 1.5;
-    }
-    .how-it-works ul {
-      list-style: none;
-      padding: 0;
-    }
-    .how-it-works ul li {
-      margin-bottom: 10px;
-      padding-left: 20px;
+      background: url('https://i.ytimg.com/vi/MsQank2kSyE/maxresdefault.jpg') no-repeat center/cover;
+      height: 60vh;
       position: relative;
+      color: white;
     }
-    .how-it-works ul li:before {
-      content: "✔️";
+    header::after {
+      content: '';
       position: absolute;
+      top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 1;
     }
-    .timer {
-      font-size: 1.4em;
-      color: #FF3E3E;
+    header .content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .gift-section img {
+      max-width: 100%;
+      height: auto;
+    }
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+    }
+    footer p {
+      font-size: 0.9em;
+    }
+    .btn-primary {
+      background-color: #0070ba;
+      border: none;
+    }
+    .btn-primary:hover {
+      background-color: #005f8d;
+    }
+    .price {
+      font-size: 1.8em;
       font-weight: bold;
-      margin-top: 10px;
+      color: #0070ba;
     }
   </style>
 </head>
 <body>
 
-<div class="landing-container">
-  <!-- Header -->
-  <header>
-    <h1>¡Gana una PS5 Slim Digital!</h1>
-    <p>Participa gratis para llevarte la nueva PlayStation 5 Slim.</p>
-  </header>
-  
-  <!-- Main Content -->
-  <section class="main-content">
-    <img src="https://media3.allzone.es/2863480-large_default/videoconsola-sony-ps5-slim-1tb-version-digital-blanco.jpg" alt="PS5 Slim Digital">
-    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=47060" class="cta-button">¡Quiero Participar!</a>
-    <div class="timer">¡Quedan pocas unidades disponibles!</div>
-  </section>
-  
-  <!-- How It Works -->
-  <section class="how-it-works">
-    <h2>¿Cómo Funciona?</h2>
-    <ul>
-      <li>Haz clic en el botón de arriba</li>
-      <li>Completa una breve encuesta</li>
-      <li>¡Ingresa y espera a ganar!</li>
-    </ul>
-  </section>
-  
-  <!-- Testimonials -->
-  <section class="testimonials">
-    <p><strong>“Increíble, ¡me llegó la PS5 en una semana!”</strong> - Javier, 25 años</p>
-    <p><strong>“Participé sin creerlo, ¡y gané!”</strong> - Marta, 30 años</p>
-  </section>
+<header>
+  <div class="content text-center">
+    <h1 class="display-4">iPhone 16 Pro</h1>
+    <p class="lead">El Futuro de la Tecnología Está Aquí. ¡Ordena el Tuyo Ahora!</p>
+  </div>
+</header>
+
+<div class="container my-5">
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="https://rossellimac.es/cdn/shop/files/iPhone_16_Pro_Desert_Titanium_PDP_Image_Position_1__ESES_16ff88ca-927c-45a4-8368-023024b8f526.jpg?v=1727251271&width=1445" alt="iPhone 16 Pro" class="img-fluid rounded">
+    </div>
+    <div class="col-md-6">
+      <h2 class="mb-3">Experimenta el Smartphone Definitivo</h2>
+      <p>El iPhone 16 Pro redefine la experiencia móvil con tecnología de punta, un diseño en titanio, el chip A18 Bionic y un sistema de cámaras inigualable.</p>
+      <p class="price">$1,199 USD</p>
+      <a href="#" class="btn btn-primary btn-lg">Comprar Ahora</a>
+    </div>
+  </div>
 </div>
 
+<div class="container text-center my-5 py-5 bg-light rounded">
+  <img src="https://www.apple.com/newsroom/images/2024/09/get-ready-to-upgrade-to-the-new-iphone-16-apple-watch-and-airpods-lineups/article/Apple-AirPods-4_inline.jpg.large.jpg" alt="AirPods Gratis" class="img-fluid">
+  <h3 class="my-3">¡Auriculares Gratis con tu Compra!</h3>
+  <p>Ordena tu iPhone 16 Pro hoy y recibe unos AirPods (4ª Generación) totalmente gratis. ¡Oferta por tiempo limitado!</p>
+</div>
+
+<div class="container my-5">
+  <h2 class="text-center mb-4">¿Por Qué Elegir el iPhone 16 Pro?</h2>
+  <div class="row text-center">
+    <div class="col-md-4 mb-4">
+      <div class="card p-4 border-0 shadow-sm">
+        <h5 class="card-title">Rendimiento Revolucionario</h5>
+        <p class="card-text">Impulsado por el chip A18 Bionic para velocidades increíbles y máxima eficiencia.</p>
+      </div>
+    </div>
+    <div class="col-md-4 mb-4">
+      <div class="card p-4 border-0 shadow-sm">
+        <h5 class="card-title">Sistema de Cámaras Pro</h5>
+        <p class="card-text">Captura fotos y videos impresionantes con un nuevo sistema de triple lente.</p>
+      </div>
+    </div>
+    <div class="col-md-4 mb-4">
+      <div class="card p-4 border-0 shadow-sm">
+        <h5 class="card-title">Batería Todo el Día</h5>
+        <p class="card-text">Mantente conectado por más tiempo con la batería líder en la industria.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer>
+  <p>&copy; 2024 Apple Inc. Todos los derechos reservados. iPhone, AirPods y el logotipo de Apple son marcas registradas de Apple Inc.</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
