--- a/index.html
+++ b/index.html
@@ -1,126 +1,171 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iPhone 16 Pro - El Futuro Está Aquí</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      color: #333;
-    }
-    header {
-      background: url('https://i.ytimg.com/vi/MsQank2kSyE/maxresdefault.jpg') no-repeat center/cover;
-      height: 60vh;
-      position: relative;
-      color: white;
-    }
-    header::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-    }
-    header .content {
-      position: relative;
-      z-index: 2;
-      text-align: center;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .gift-section img {
-      max-width: 100%;
-      height: auto;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 20px 10px;
-    }
-    footer p {
-      font-size: 0.9em;
-    }
-    .btn-primary {
-      background-color: #0070ba;
-      border: none;
-    }
-    .btn-primary:hover {
-      background-color: #005f8d;
-    }
-    .price {
-      font-size: 1.8em;
-      font-weight: bold;
-      color: #0070ba;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Completa una oferta gratuita y accede a Pokémon Amarillo y su emulador. Descarga ahora y revive la aventura.">
+    <title>¡Descarga Pokémon Amarillo GRATIS! Completa la Oferta</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        header {
+            background-image: url('https://www.barrie.ca/sites/default/files/styles/16_9/public/2023-07/Game-On.jpg?itok=3pRQRUgu');
+            background-size: cover;
+            background-position: center;
+            text-align: center;
+            color: #fff;
+            padding: 4rem 2rem;
+        }
+
+        .hero h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin: 1rem 0;
+            font-weight: bold;
+        }
+
+        .alert {
+            background-color: #ffcc00;
+            padding: 1rem;
+            text-align: center;
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin: 1rem 0;
+        }
+
+        main {
+            padding: 2rem;
+        }
+
+        section {
+            margin-bottom: 2rem;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .description {
+            padding: 1.5rem;
+        }
+
+        .description h2 {
+            font-size: 1.5rem;
+            margin-top: 0;
+        }
+
+        .description p {
+            font-size: 1rem;
+            margin: 1rem 0;
+        }
+
+        .cta-button {
+            display: inline-block;
+            background-color: #ffcc00;
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 1rem 1.5rem;
+            font-size: 1.2rem;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #e6b800;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #222;
+            color: #fff;
+            font-size: 0.9rem;
+        }
+
+        .steps {
+            background-color: #f4f4f9;
+            padding: 1rem;
+            border-left: 5px solid #ffcc00;
+            margin: 1rem 0;
+        }
+
+        .steps h3 {
+            font-size: 1.2rem;
+            margin: 0;
+        }
+
+        .steps p {
+            margin: 0.5rem 0 0;
+            font-size: 1rem;
+        }
+    </style>
 </head>
 <body>
-
-<header>
-  <div class="content text-center">
-    <h1 class="display-4">iPhone 16 Pro</h1>
-    <p class="lead">El Futuro de la Tecnología Está Aquí. ¡Ordena el Tuyo Ahora!</p>
-  </div>
-</header>
-
-<div class="container my-5">
-  <div class="row align-items-center">
-    <div class="col-md-6">
-      <img src="https://rossellimac.es/cdn/shop/files/iPhone_16_Pro_Desert_Titanium_PDP_Image_Position_1__ESES_16ff88ca-927c-45a4-8368-023024b8f526.jpg?v=1727251271&width=1445" alt="iPhone 16 Pro" class="img-fluid rounded">
+    <header>
+        <div class="hero">
+            <h1>¡Descarga Pokémon Amarillo GRATIS!</h1>
+            <p>Completa una oferta rápida y accede al juego y al emulador. ¡Así de fácil!</p>
+        </div>
+    </header>
+    <div class="alert">
+        🚨 Oferta exclusiva: Solo disponible hoy. ¡Completa ahora para empezar a jugar! 🚨
     </div>
-    <div class="col-md-6">
-      <h2 class="mb-3">Experimenta el Smartphone Definitivo</h2>
-      <p>El iPhone 16 Pro redefine la experiencia móvil con tecnología de punta, un diseño en titanio, el chip A18 Bionic y un sistema de cámaras inigualable.</p>
-      <p class="price">$1,199 USD</p>
-      <a href="#" class="btn btn-primary btn-lg">Comprar Ahora</a>
-    </div>
-  </div>
-</div>
-
-<div class="container text-center my-5 py-5 bg-light rounded">
-  <img src="https://www.apple.com/newsroom/images/2024/09/get-ready-to-upgrade-to-the-new-iphone-16-apple-watch-and-airpods-lineups/article/Apple-AirPods-4_inline.jpg.large.jpg" alt="AirPods Gratis" class="img-fluid">
-  <h3 class="my-3">¡Auriculares Gratis con tu Compra!</h3>
-  <p>Ordena tu iPhone 16 Pro hoy y recibe unos AirPods (4ª Generación) totalmente gratis. ¡Oferta por tiempo limitado!</p>
-</div>
-
-<div class="container my-5">
-  <h2 class="text-center mb-4">¿Por Qué Elegir el iPhone 16 Pro?</h2>
-  <div class="row text-center">
-    <div class="col-md-4 mb-4">
-      <div class="card p-4 border-0 shadow-sm">
-        <h5 class="card-title">Rendimiento Revolucionario</h5>
-        <p class="card-text">Impulsado por el chip A18 Bionic para velocidades increíbles y máxima eficiencia.</p>
-      </div>
-    </div>
-    <div class="col-md-4 mb-4">
-      <div class="card p-4 border-0 shadow-sm">
-        <h5 class="card-title">Sistema de Cámaras Pro</h5>
-        <p class="card-text">Captura fotos y videos impresionantes con un nuevo sistema de triple lente.</p>
-      </div>
-    </div>
-    <div class="col-md-4 mb-4">
-      <div class="card p-4 border-0 shadow-sm">
-        <h5 class="card-title">Batería Todo el Día</h5>
-        <p class="card-text">Mantente conectado por más tiempo con la batería líder en la industria.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer>
-  <p>&copy; 2024 Apple Inc. Todos los derechos reservados. iPhone, AirPods y el logotipo de Apple son marcas registradas de Apple Inc.</p>
-</footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <main>
+        <section class="game-info">
+            <div class="image-container">
+                <img src="https://static.wikia.nocookie.net/espokemon/images/9/95/Pok%C3%A9mon_Amarillo.png/revision/latest?cb=20160715100157" alt="Pokémon Amarillo">
+            </div>
+            <div class="description">
+                <h2>¿Por qué necesitas completar la oferta?</h2>
+                <p>Para evitar bots y garantizar la seguridad de la descarga, necesitas completar una oferta gratuita. Solo tomará un minuto y luego podrás descargar Pokémon Amarillo y su emulador.</p>
+                <div class="steps">
+                    <h3>Pasos para acceder:</h3>
+                    <p>1. Haz clic en el botón de abajo.</p>
+                    <p>2. Completa una oferta rápida (registro, encuesta o descarga de app).</p>
+                    <p>3. Descarga el juego y el emulador automáticamente. ¡Listo para jugar!</p>
+                </div>
+                <a href="https://superfolder.net/paulborrueco" class="cta-button">Accede al Juego y Emulador Ahora</a>
+            </div>
+        </section>
+        <section class="emulator-info">
+            <div class="image-container">
+                <img src="https://play-lh.googleusercontent.com/DGwIAHciSKZItmDMoZH7nD4LqYFPJC1_SdGJalkGJPlDMeJ4yWL9eUFF2HdXNp4BNhI_" alt="Emulador">
+            </div>
+            <div class="description">
+                <h2>¿Qué incluye la descarga?</h2>
+                <p>Recibirás:</p>
+                <ul>
+                    <li>✅ La ROM de Pokémon Amarillo (juego completo).</li>
+                    <li>✅ El emulador compatible con PC y móvil.</li>
+                </ul>
+                <p>No pierdas esta oportunidad y revive la nostalgia de este clásico. ¡Completa la oferta ahora y empieza a jugar!</p>
+                <a href="https://superfolder.net/paulborrueco" class="cta-button">Obtén tu Juego y Emulador</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 - Descarga Pokémon Amarillo. Diseñado para jugadores como tú. Atrápalos a todos.</p>
+    </footer>
 </body>
 </html>
+
 
 
