--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Completa una oferta gratuita y accede a Pokémon Amarillo y su emulador. Descarga ahora y revive la aventura.">
-    <title>¡Descarga Pokémon Amarillo GRATIS! Completa la Oferta</title>
+    <meta name="description" content="Complete a free offer and access Pokémon Yellow and its emulator. Download now and relive the adventure.">
+    <title>Download Pokémon Yellow FOR FREE! Complete the Offer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -57,9 +57,10 @@
         }
 
         .image-container img {
-            max-width: 100%;
+            max-width: 90%; /* Adjusts the width to 90% of the container */
             height: auto;
             display: block;
+            margin: 0 auto; /* Centers the image */
         }
 
         .description {
@@ -121,48 +122,48 @@
 <body>
     <header>
         <div class="hero">
-            <h1>¡Descarga Pokémon Amarillo GRATIS!</h1>
-            <p>Completa una oferta rápida y accede al juego y al emulador. ¡Así de fácil!</p>
+            <h1>Download Pokémon Yellow FOR FREE!</h1>
+            <p>Complete a quick offer and access the game and emulator. It's that easy!</p>
         </div>
     </header>
     <div class="alert">
-        🚨 Oferta exclusiva: Solo disponible hoy. ¡Completa ahora para empezar a jugar! 🚨
+        🚨 Exclusive offer: Available only today. Complete now to start playing! 🚨
     </div>
     <main>
         <section class="game-info">
             <div class="image-container">
-                <img src="https://static.wikia.nocookie.net/espokemon/images/9/95/Pok%C3%A9mon_Amarillo.png/revision/latest?cb=20160715100157" alt="Pokémon Amarillo">
+                <img src="https://static.wikia.nocookie.net/fakemon/images/3/3e/PKMN_Yellow_GBA.png/revision/latest?cb=20180610223852&path-prefix=es" alt="Pokémon Yellow">
             </div>
             <div class="description">
-                <h2>¿Por qué necesitas completar la oferta?</h2>
-                <p>Para evitar bots y garantizar la seguridad de la descarga, necesitas completar una oferta gratuita. Solo tomará un minuto y luego podrás descargar Pokémon Amarillo y su emulador.</p>
+                <h2>Why do you need to complete the offer?</h2>
+                <p>To prevent bots and ensure the security of the download, you need to complete a free offer. It will only take a minute, and then you can download Pokémon Yellow and its emulator.</p>
                 <div class="steps">
-                    <h3>Pasos para acceder:</h3>
-                    <p>1. Haz clic en el botón de abajo.</p>
-                    <p>2. Completa una oferta rápida (registro, encuesta o descarga de app).</p>
-                    <p>3. Descarga el juego y el emulador automáticamente. ¡Listo para jugar!</p>
+                    <h3>Steps to access:</h3>
+                    <p>1. Click the button below.</p>
+                    <p>2. Complete a quick offer (registration, survey, or app download).</p>
+                    <p>3. Automatically download the game and emulator. Ready to play!</p>
                 </div>
-                <a href="https://superfolder.net/paulborrueco" class="cta-button">Accede al Juego y Emulador Ahora</a>
+                <a href="https://superfolder.net/paulborrueco" class="cta-button">Access the Game and Emulator Now</a>
             </div>
         </section>
         <section class="emulator-info">
             <div class="image-container">
-                <img src="https://play-lh.googleusercontent.com/DGwIAHciSKZItmDMoZH7nD4LqYFPJC1_SdGJalkGJPlDMeJ4yWL9eUFF2HdXNp4BNhI_" alt="Emulador">
+                <img src="https://play-lh.googleusercontent.com/DGwIAHciSKZItmDMoZH7nD4LqYFPJC1_SdGJalkGJPlDMeJ4yWL9eUFF2HdXNp4BNhI_" alt="Emulator">
             </div>
             <div class="description">
-                <h2>¿Qué incluye la descarga?</h2>
-                <p>Recibirás:</p>
+                <h2>What does the download include?</h2>
+                <p>You will receive:</p>
                 <ul>
-                    <li>✅ La ROM de Pokémon Amarillo (juego completo).</li>
-                    <li>✅ El emulador compatible con PC y móvil.</li>
+                    <li>✅ Pokémon Yellow ROM (full game).</li>
+                    <li>✅ The emulator compatible with PC and mobile.</li>
                 </ul>
-                <p>No pierdas esta oportunidad y revive la nostalgia de este clásico. ¡Completa la oferta ahora y empieza a jugar!</p>
-                <a href="https://superfolder.net/paulborrueco" class="cta-button">Obtén tu Juego y Emulador</a>
+                <p>Don't miss this opportunity to relive the nostalgia of this classic. Complete the offer now and start playing!</p>
+                <a href="https://superfolder.net/paulborrueco" class="cta-button">Get Your Game and Emulator</a>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 - Descarga Pokémon Amarillo. Diseñado para jugadores como tú. Atrápalos a todos.</p>
+        <p>&copy; 2024 - Download Pokémon Yellow. Designed for players like you. Catch them all.</p>
     </footer>
 </body>
 </html>
