--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <main>
         <section class="game-info">
             <div class="image-container">
-                <img src="https://static.wikia.nocookie.net/fakemon/images/3/3e/PKMN_Yellow_GBA.png/revision/latest?cb=20180610223852&path-prefix=es" alt="Pokémon Yellow">
+                <img src="https://www.retroplace.com/pics/gameboy/packshots/34075--pokemon-yellow-version.png" alt="Pokémon Yellow">
             </div>
             <div class="description">
                 <h2>Why do you need to complete the offer?</h2>
@@ -167,6 +167,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
