--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <main>
         <section class="game-info">
             <div class="image-container">
-                <img src="https://www.retroplace.com/pics/gameboy/packshots/34075--pokemon-yellow-version.png" alt="Pokémon Yellow">
+                <img src="https://user-images.githubusercontent.com/33353403/41564986-14c2acd8-7355-11e8-9373-55b6627b8c8a.png" alt="Pokémon Yellow">
             </div>
             <div class="description">
                 <h2>Why do you need to complete the offer?</h2>
@@ -167,6 +167,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
