--- a/index.html
+++ b/index.html
@@ -1,144 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Find Hot Singles Near You</title>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9VLD02NMS"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-H9VLD02NMS');
-  </script>
-
+  <title>Video Landing Page</title>
   <style>
-    body {
+    /* Reset básico */
+    * {
       margin: 0;
       padding: 0;
-      background: #000;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
       color: #fff;
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-    }
-    .container {
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-    .image-wrapper {
-      position: relative;
-      display: inline-block;
-      cursor: pointer;
-    }
-    .image-wrapper img {
-      width: 100%;
-      max-width: 600px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255, 20, 147, 0.7);
-    }
-    .play-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80px;
-      height: 80px;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 50%;
       display: flex;
+      flex-direction: column;
+      min-height: 100vh;
       align-items: center;
       justify-content: center;
-      animation: heartbeat 1.5s infinite;
+      padding: 20px;
     }
-    .play-button::before {
-      content: '';
-      display: block;
-      width: 0;
-      height: 0;
-      border-left: 25px solid white;
-      border-top: 15px solid transparent;
-      border-bottom: 15px solid transparent;
-      margin-left: 5px;
+
+    .container {
+      max-width: 900px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
     }
-    @keyframes heartbeat {
-      0% { transform: translate(-50%, -50%) scale(1); }
-      14% { transform: translate(-50%, -50%) scale(1.3); }
-      28% { transform: translate(-50%, -50%) scale(1); }
-      42% { transform: translate(-50%, -50%) scale(1.3); }
-      70% { transform: translate(-50%, -50%) scale(1); }
-    }
-    .btn {
-      display: inline-block;
-      padding: 15px 35px;
-      background: #ff1493;
-      color: #fff;
-      font-size: 1.2rem;
+
+    video {
+      width: 100%;
+      max-height: 500px;
       border-radius: 8px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-      font-weight: bold;
-      cursor: pointer;
+      background: #000;
+      outline: none;
     }
-    .btn:hover {
-      background: #e01187;
+
+    .ad-banner {
+      width: 300px;
+      height: 250px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(255 255 255 / 0.2);
+      background: #222;
+    }
+
+    .social-bar {
+      width: 100%;
+      max-width: 900px;
+      margin-top: 15px;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .ad-banner {
+        width: 100%;
+        height: auto;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Looking for Hot Singles Near You?</h1>
 
-    <div class="image-wrapper" id="playWrapper">
-      <img src="https://pbs.twimg.com/media/ElNIqLSXUAAu8qG.jpg" alt="Sexy woman" />
-      <div class="play-button"></div>
+  <div class="container">
+
+    <!-- Video -->
+    <video
+      autoplay
+      muted
+      loop
+      playsinline
+      controls
+      preload="auto"
+      src="https://s3.filebin.net/filebin/70c7b42d83c1a0ab3701b9dea8c34d8e1f15cdd86886ef462c0de37c26ca9196/35be30114f68138ce50749eec2fa3ca57c292b94cd2b54663466a5097cc95ede?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=7pMj6hGeoKewqmMQILjm%2F20250608%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250608T205610Z&X-Amz-Expires=60&X-Amz-SignedHeaders=host&response-cache-control=max-age%3D60&response-content-disposition=inline%3B%20filename%3D%22%5BDownPorn.net%5D_720P_4000K_441419631.mp4%22&response-content-type=video%2Fmp4&X-Amz-Signature=62d2e410cb0cf27e6b0e670694e83ba1e0ef3d0eb53ac7131aa52bdfc97737e5"
+    ></video>
+
+    <!-- Banner Adsterra -->
+    <div class="ad-banner">
+      <script type="text/javascript">
+        atOptions = {
+          'key': 'cfe6fc7c68e3318c0e552c6c6312c209',
+          'format': 'iframe',
+          'height': 250,
+          'width': 300,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
     </div>
 
-    <p>Meet local singles who can't wait to chat with you!</p>
-
-    <a href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" 
-       class="btn" 
-       target="_blank" 
-       rel="noopener noreferrer"
-       id="ctaButton"
-    >See Who's Waiting</a>
   </div>
 
-  <script>
-    document.getElementById('playWrapper').addEventListener('click', function () {
-      const url = document.getElementById('ctaButton').href;
+  <!-- Social Bar Adsterra -->
+  <div class="social-bar">
+    <script type="text/javascript" src="//pl26870440.profitableratecpm.com/de/fe/20/defe20cc99b911d434f425091e53a0e7.js"></script>
+  </div>
 
-      gtag('event', 'click', {
-        'event_category': 'CTA',
-        'event_label': 'Play Button Image',
-        'event_callback': function () {
-          window.location.href = url;
-        },
-        'transport_type': 'beacon'
-      });
-
-      // Fallback por si GA tarda
-      setTimeout(() => {
-        window.location.href = url;
-      }, 1000);
-    });
-
-    // El botón principal no dispara GA, solo redirige
-    document.getElementById('ctaButton').addEventListener('click', function () {
-      // Nada se registra, solo redirige
-    });
-  </script>
 </body>
 </html>
+
 
 
