--- a/index.html
+++ b/index.html
@@ -2,68 +2,140 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9VLD02NMS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9VLD02NMS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-H9VLD02NMS');
+  </script>
 
-  gtag('config', 'G-H9VLD02NMS');
-</script>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Watch Now - Adult Exclusive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Watch Exclusive Adult Video Online | Free HD Porn Streaming</title>
+  <meta name="description" content="Watch the hottest exclusive adult video online in HD quality for free. No signup required. Stream the best porn videos now." />
+  <meta name="keywords" content="adult video, exclusive porn video, free porn streaming, HD adult video, watch adult video online, free porn videos, xxx video streaming" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Watch Exclusive Adult Video Online | Free HD Porn Streaming" />
+  <meta property="og:description" content="Watch the hottest exclusive adult video online in HD quality for free. No signup required." />
+  <meta property="og:type" content="video.other" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://yourdomain.com/thumbnail.jpg" />
+
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: #000;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
+      line-height: 1.6;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 20px;
     }
-    video {
-      max-width: 100%;
-      height: auto;
-      margin-bottom: 10px;
-      border: 3px solid #ff0055;
-      border-radius: 10px;
+    h1, h2, h3 {
+      color: #ff0055;
+      margin-top: 1.5em;
     }
-    .cta-button {
-      padding: 15px 25px;
-      background-color: #ff0055;
-      color: white;
-      font-size: 18px;
-      text-decoration: none;
-      border-radius: 8px;
-      margin: 10px 0;
+    a.cta-button {
       display: inline-block;
+      padding: 15px 30px;
+      background-color: #ff0055;
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.2em;
+      border-radius: 8px;
+      margin: 20px 0;
       animation: pulse 1.5s infinite;
+      transition: background-color 0.3s ease;
+    }
+    a.cta-button:hover {
+      background-color: #e6004d;
     }
     @keyframes pulse {
-      0% { transform: scale(1); }
+      0%, 100% { transform: scale(1); }
       50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
+    }
+    video {
+      width: 100%;
+      max-height: 480px;
+      border: 3px solid #ff0055;
+      border-radius: 10px;
+      background-color: black;
+      margin-bottom: 1em;
+    }
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
     }
     .ad-container {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      z-index: 1000;
+      margin-top: 20px;
+      text-align: center;
+    }
+    footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #ccc;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline></video>
 
-  <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank">🔞 Unlock Full Video Access</a>
+  <h1>Watch Exclusive Adult Video Online in Full HD - Free Streaming</h1>
 
-  <!-- Adsterra Banner -->
+  <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg" ></video>
+
+  <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank" rel="noopener noreferrer">🔞 Unlock Full Video Access Now</a>
+
+  <section>
+    <h2>Why Watch Our Exclusive Adult Video?</h2>
+    <p>Experience the most thrilling <strong>exclusive adult video content</strong> available online. Our video streams in <strong>high definition (HD)</strong> with <em>buffer-free playback</em>. Whether you're on desktop or mobile, enjoy a seamless viewing experience without the hassle of popups or intrusive ads.</p>
+    <ul>
+      <li>Free and easy access – no signup or registration required</li>
+      <li>Compatible with all devices: desktop, tablet, and smartphone</li>
+      <li>High-quality HD streaming for crystal-clear visuals</li>
+      <li>Safe and secure platform protecting your privacy</li>
+      <li>Regular updates with new exclusive adult videos</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>How to Watch the Full Video</h2>
+    <p>Click on the <strong>Unlock Full Video Access</strong> button above to access the complete video. Our trusted partners ensure secure and fast delivery, with additional bonus content available for premium users.</p>
+  </section>
+
+  <section>
+    <h2>Frequently Asked Questions (FAQs)</h2>
+    <div itemscope itemtype="https://schema.org/FAQPage">
+      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
+        <h3 itemprop="name">Is the adult video free to watch?</h3>
+        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
+          <p itemprop="text">Yes, you can watch a preview for free directly on this page. To unlock the full video and exclusive bonus content, click the button above.</p>
+        </div>
+      </div>
+
+      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
+        <h3 itemprop="name">Can I watch on my mobile device?</h3>
+        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
+          <p itemprop="text">Absolutely! Our video player is fully compatible with smartphones and tablets, offering smooth playback across all platforms.</p>
+        </div>
+      </div>
+
+      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
+        <h3 itemprop="name">Is my privacy protected while watching?</h3>
+        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
+          <p itemprop="text">We respect your privacy. No personal data is collected or stored when you watch the video here.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="ad-container">
+    <!-- Adsterra Banner -->
     <script type="text/javascript">
       atOptions = {
         'key' : 'cfe6fc7c68e3318c0e552c6c6312c209',
@@ -81,8 +153,14 @@
 
   <!-- Push Notification Script (example: Adsterra or Propeller) -->
   <script src="https://push-sdk.com/pfe/current/tag.min.js?z=REPLACE_WITH_YOUR_ID" data-cfasync="false" async></script>
+
+  <footer>
+    &copy; 2025 Adult Exclusive Video Streaming. All rights reserved.
+  </footer>
+
 </body>
 </html>
+
 
 
 
