--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
       margin-left: 20px;
     }
     .ad-container {
-      margin-top: 20px;
+      margin: 20px auto;
       text-align: center;
+      max-width: 320px; /* ajustado al ancho del banner */
     }
     footer {
       margin-top: 50px;
@@ -90,6 +91,21 @@
   <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg" ></video>
 
   <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank" rel="noopener noreferrer">🔞 Unlock Full Video Access Now</a>
+
+  <!-- Banner colocado justo debajo del botón para máxima visibilidad -->
+  <div class="ad-container">
+    <!-- Adsterra Banner -->
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'cfe6fc7c68e3318c0e552c6c6312c209',
+        'format' : 'iframe',
+        'height' : 250,
+        'width' : 300,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
+  </div>
 
   <section>
     <h2>Why Watch Our Exclusive Adult Video?</h2>
@@ -134,20 +150,6 @@
     </div>
   </section>
 
-  <div class="ad-container">
-    <!-- Adsterra Banner -->
-    <script type="text/javascript">
-      atOptions = {
-        'key' : 'cfe6fc7c68e3318c0e552c6c6312c209',
-        'format' : 'iframe',
-        'height' : 250,
-        'width' : 300,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
-  </div>
-
   <!-- Social Bar Adsterra -->
   <script type='text/javascript' src='//pl26870440.profitableratecpm.com/de/fe/20/defe20cc99b911d434f425091e53a0e7.js'></script>
 
@@ -160,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
